--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       </div>
   </nav>
 
-  <aside id="shoppingCratContainer" class="inactive">
+  <aside id="shoppingCartContainer" class="inactive">
     <div class="title-container">
       <img src="./icons/flechita.svg" alt="arrow">
       <p class="title">My order</p>
